# pyBooxDrop

./: .lazy.lua  .markdownlint.json  Makefile  README.md  TODO.md  pyproject.toml  pyrightconfig.json
.github/workflows/: check-version.yml  ci.yml  e2e.yml  release.yml  test-release.yml
examples/: users_send_verify_code.py  users_sync_token.py
examples/users/: get_device.py  get_user_info.py  signup_by_phone_or_email.py  sync_session_token.py  sync_token.py
src/boox/: __about__.py  __init__.py  client.py  core.py
src/boox/api/: config_users.py  core.py  users.py
src/boox/models/: base.py  enums.py  protocols.py  users.py
tests/: conftest.py  test_about.py  test_basic.py  test_client.py  test_core.py  test_init.py  utils.py
tests/api/: conftest.py  test_config_users_api.py  test_core_api.py  test_users_api.py  utils.py
tests/api/config_users/: conftest.py  test_config_users_api.py  test_sync_token.py
tests/api/users/: conftest.py  test_fetch_session_token.py  test_get_device_info.py  test_get_user_info.py  test_send_verification_code.py  test_synchronize_session_token.py
tests/models/: test_base_models.py  test_users.py  test_users_models.py
