[project]
name = "pybooxdrop"
version = "0.1.1"
description = "A simple, unofficial Python API library for Onyx BooxDrop."
authors = [
  { name = "Filip Godlewski", email = "54432731+filipgodlewski@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["boox", "onyx", "ebook", "api", "reader"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.5"]

[dependency-groups]
dev = [
  "basedpyright>=1.29.4",
  "pydantic[email]>=2.11.5",
  "pytest>=8.3.5",
  "respx>=0.22.0",
]

[project.optional-dependencies]
lint = ["bandit>=1.8.5", "pyupgrade>=3.20.0", "ruff>=0.12.0"]
release = ["build>=1.2.2.post1", "twine>=6.1.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
unsafe-fixes = true
fix = true
respect-gitignore = true

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
preview = true

[tool.ruff.lint]
preview = true
extend-select = [
  "E",   # pycodestyle (style issues)
  "F",   # pyflakes (error detection)
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modern Python syntax)
  "B",   # flake8-bugbear (likely bugs and code smells)
  "C4",  # flake8-comprehensions (comprehension optimizations)
  "TID", # flake8-tidy-imports (import restrictions and tidiness)
  "SIM", # flake8-simplify (simplifiable code patterns)
  "PL",  # pylint rules (stricter code quality checks)
  "RUF", # ruff-specific rules
  "PYI", # stub file checks (`.pyi` style and correctness)
  "N",   # pep8-naming (naming conventions, e.g., classes in PascalCase)
  "PTH", # pathlib preferred over `os.path`, `open()`, etc.
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
markers = ["e2e: test requiring external API (connects to a real boox server)"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
